0.4.1 (dev)
  Improvement: Show a "Collecting transaction data..." msg before presenting the transaction 
    dialog, as it can be quite slow on some systems.

0.4.0 (2024/07/29)
  BugFix: Remove and install command was not working.
  Improvement: Files tab expand all items by default.
  Source code now default to using Qt6 libs.
  Now using the unified qt-sudo project (https://github.com/aarnt/qt-sudo) for privilege escalation.
  All transaction look first for xbps-install/xbps-remove wrappers on /usr/local/bin path,
    which can be used to emulate hooks.

0.3.3 (2023/12/24)
  BugFix: Notifier was not syncing repos (thanks to dexgs).
  BugFix: Check updates was printing a buggy string.
  Synched octoxbps-sudo code with lxqt-sudo version 1.4.0.  

0.3.2 (2023/09/26)
  Make code compatible with Qt5/Qt6 libs.
  Updated project site to tintaescura.com.
  BugFix: Notifier's output dialog did not save its size/position.
  BugFix: Notifier was asking for a password when user tried to "Sync database".

0.3.1 (2023/09/08)
  Added german translation (thanks to Leon Schumacher - 42LoCo42).
  Added dutch translation (thanks to Heimen Stoffels - Vistaus).
  Added turkish translation (thanks to Mehmet Akif - madanadam).
  Added russian translation (thanks to Carmina16).
  Added support for opendoas commad in octoxbps-sudo and internal terminal.
  Synched octoxbps-sudo code with lxqt-sudo version 1.3.0.
  Actions tab shows a counter feedback for inserts (with a plus signal) and 
    removals (with a minus signal) and does not steal focus anymore. 
  Changed "Sync packages" string to "Check updates".
  BugFix: openFile always left a running file manager even after program close.
  BugFix: Disable refreshing of Info and File tabs while searching for a pkg.
  BugFix: Prefer bash shell when running actions.
  BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
  BugFix: Package search did not work correctly when query string contained a "+" sign.