@@ -132,14 +132,7 @@ QString utils::retrieveDistroNews(bool searchForLatestNews)
   {
     //QString curlCommand = "curl %1 -o %2";
 
-    if (distro == ectn_TRIDENT)
-    {
-      //curlCommand = curlCommand.arg(ctn_TRIDENT_RSS_URL).arg(tmpRssPath);
-      sl << ctn_TRIDENT_RSS_URL;
-      sl << QStringLiteral("-o");
-      sl << tmpRssPath;
-    }
-    else if (distro == ectn_VOID)
+    if (distro == ectn_VOID)
     {
       //curlCommand = curlCommand.arg(ctn_VOID_RSS_URL).arg(tmpRssPath);
       sl << ctn_VOID_RSS_URL;
@@ -230,88 +223,7 @@ QString utils::parseDistroNews()
   LinuxDistro distro = UnixCommand::getLinuxDistro();
   QString rssPath = QDir::homePath() + QDir::separator() + ".config/octoxbps/distro_rss.xml";
 
-  if (distro == ectn_TRIDENT)
-  {
-    html = "<p align=\"center\"><h2>" + StrConstants::getTridentNews() + "</h2></p><ul>";
-
-    QDomDocument doc("rss");
-    int itemCounter=0;
-
-    QFile file(rssPath);
-
-    if (!file.open(QIODevice::ReadOnly)) return "";
-
-    if (!doc.setContent(&file)) {
-        file.close();
-        return "";
-    }
-
-    file.close();
-
-    QDomElement docElem = doc.documentElement(); //This is rss
-    QDomNode n = docElem.firstChild(); //This is channel
-    n = n.firstChild();
-
-    while(!n.isNull()) {
-      QDomElement e = n.toElement();
-
-      if(!e.isNull())
-      {
-        if(e.tagName() == "item")
-        {
-          //Let's iterate over the 10 lastest "item" news
-          if (itemCounter == 10) break;
-
-          QDomNode text = e.firstChild();
-          QString itemTitle;
-          QString itemLink;
-          QString itemDescription;
-          QString itemPubDate;
-
-          while(!text.isNull())
-          {
-            QDomElement eText = text.toElement();
-
-            if(!eText.isNull())
-            {
-              if (eText.tagName() == "title")
-              {
-                itemTitle = "<h3>" + eText.text() + "</h3>";
-              }
-              else if (eText.tagName() == "link")
-              {
-                itemLink = Package::makeURLClickable(eText.text());
-              }
-              else if (eText.tagName() == "description")
-              {
-                itemDescription = eText.text();
-                itemDescription += "<br>";
-              }
-              else if (eText.tagName() == "pubDate")
-              {
-                itemPubDate = eText.text();
-                itemPubDate = itemPubDate.remove(QRegularExpression("\\n"));
-                int pos = itemPubDate.indexOf("+");
-
-                if (pos > -1)
-                {
-                  itemPubDate = itemPubDate.mid(0, pos-1).trimmed() + "<br>";
-                }
-              }
-            }
-
-            text = text.nextSibling();
-          }
-
-          html += "<li><p>" + itemTitle + " " + itemPubDate + "<br>" + itemLink + itemDescription + "</p></li>";
-          itemCounter++;
-        }
-      }
-
-      n = n.nextSibling();
-    }
-  }
-  else if (distro == ectn_VOID)
+  if (distro == ectn_VOID)
   {
     html = "<p align=\"center\"><h2>" + StrConstants::getVoidNews() + "</h2></p><ul>";
 
